Add wood stripping with grinder, cleanup grinder recipe implementation